--- a/MaterialWinformsExample/Properties/Resources.resx
+++ b/MaterialWinformsExample/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="ic_action_action_search" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ic_action_action_search.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ic_launcher" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ic_launcher.ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
